--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,14 @@
-E:\FlutterProjects\ChecklistApp\checklistapp\.dart_tool
-E:\FlutterProjects\ChecklistApp\checklistapp\.idea
-E:\FlutterProjects\ChecklistApp\checklistapp\build
-E:\FlutterProjects\ChecklistApp\jsbackend\generated
-E:\FlutterProjects\ChecklistApp\jsbackend\node_modules
-E:\FlutterProjects\ChecklistApp\jsbackend\dist
-E:\FlutterProjects\ChecklistApp\jsbackend\key\localhost-cert.pem
-E:\FlutterProjects\ChecklistApp\jsbackend\key\localhost-key.pem
+checklistapp/.dart_tool
+checklistapp/.idea
+checklistapp/build
+jsbackend/.env
+jsbackend/node_modules
+jsbackend/dist
+jsbackend/key/localhost-cert.pem
+jsbackend/key/localhost-key.pem
+springversion/application.properties
+netversion/obj
+netversion/bin/Debug/net7.0
+!netversion/bin/Debug/appsettings.json
+!netversion/bin/Debug/appsettings.Development.json
+jsbackend/.env
