--- a/jsbackend/package.json
+++ b/jsbackend/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "jsbackend",
+  "name": "jsbackend2",
   "version": "1.0.0",
-  "description": "Backend to serve and save notes from a Flutter app.",
   "main": "index.js",
   "type": "module",
   "scripts": {
@@ -9,13 +8,22 @@
   },
   "author": "",
   "license": "ISC",
+  "description": "",
   "dependencies": {
-    "@prisma/client": "^6.13.0",
+    "bcrypt": "^6.0.0",
+    "dotenv": "^17.2.1",
+    "drizzle-orm": "^0.44.4",
     "express": "^5.1.0",
-    "prisma": "^6.13.0"
+    "jsonwebtoken": "^9.0.2",
+    "pg": "^8.16.3",
+    "postgres": "^3.4.7"
   },
   "devDependencies": {
-    "@types/node": "^24.2.0",
-    "typescript": "^5.9.2"
+    "@types/bcrypt": "^6.0.0",
+    "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/pg": "^8.15.5",
+    "drizzle-kit": "^0.31.4",
+    "tsx": "^4.20.4"
   }
 }
