--- a/jsbackend/tsconfig.json
+++ b/jsbackend/tsconfig.json
@@ -1,11 +1,20 @@
 {
   "compilerOptions": {
-    "module": "esnext",
-    "esModuleInterop": true,
-    "target": "es2022",
-    "moduleResolution": "node",
+    "module": "nodenext",
+    "target": "esnext",
+    "types": [],
     "sourceMap": true,
+    "declaration": true,
+    "declarationMap": true,
+    "noUncheckedIndexedAccess": true,
+    "exactOptionalPropertyTypes": true,
+    "strict": true,
+    "jsx": "react-jsx",
+    "verbatimModuleSyntax": true,
+    "isolatedModules": true,
+    "moduleDetection": "force",
+    "skipLibCheck": true,
     "outDir": "dist",
     "lib": ["es2022", "dom"]
-  },
+  }
 }
