--- a/springversion/src/main/resources/application.properties
+++ b/springversion/src/main/resources/application.properties
@@ -4,3 +4,9 @@ spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.enabled=true
 spring.thymeleaf.check-template-location=true
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/NotesAppJava
+spring.datasource.username=postgres
+spring.datasource.password=1234
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
