--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ jsbackend/dist
 jsbackend/key/localhost-cert.pem
 jsbackend/key/localhost-key.pem
 springversion/application.properties
+springversion/jooq_generator
 netversion/obj
 netversion/bin/Debug/net7.0
 !netversion/bin/Debug/appsettings.json
