--- a/netversion/appsettings.Development.json
+++ b/netversion/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "NotesAppNetConnection": "Host=localhost;Port=5432;Database=NotesAppNET;Username=postgres;Password=1234"
   }
 }
