--- a/netversion/appsettings.json
+++ b/netversion/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "NotesAppNetConnection": "Host=localhost;Port=5432;Database=NotesApp;Username=your_user;Password=your_password"
+  }
 }
